<?xml version="1.0"?>
<package>
  <name>rosxslt</name>
  <version>0.0.0</version>
  <description>The rosxslt package</description>

  <author email="levi.armstrong@swri.org">Levi Armstrong</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/rosxslt</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roslaunch</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
